kustomize/restgeld/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restgeld
  labels:
    name: restgeld
