kustomize/restgeld/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restgeld-frontend
  labels:
    app: restgeld
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restgeld
      component: frontend
  template:
    metadata:
      labels:
        app: restgeld
        component: frontend
    spec:
      containers:
        - name: frontend
          image: pipelinedave/restgeld-frontend:latest
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
