kustomize/restgeld/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-auth-service
  labels:
    app: restgeld
    component: auth-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  selector:
    app: restgeld
    component: auth-service
