kustomize/restgeld/billing-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-billing-service
  labels:
    app: restgeld
    component: billing-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
      name: http
  selector:
    app: restgeld
    component: billing-service
