kustomize/restgeld/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-frontend
  labels:
    app: restgeld
    component: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: restgeld
    component: frontend
