kustomize/restgeld/monitoring-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restgeld-monitoring-service
  labels:
    app: restgeld
    component: monitoring-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: restgeld
    component: monitoring-service
